<resources>
    <string name="app_name">ByLaws</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_i">Article I</string>
    <string name="article_subheading">Title and Scope of Act</string>
<string name="section1"><b>SECTION 1. Title of Act.</b> – This Act shall be known as the “Land Transportation and Traffic Code.”</string>
    <string name="section_2"><b>SECTION 2. Scope of Act.</b> – The provisions of this Act shall control, as far as they apply, the registration and operation of motor
        vehicles and the licensing of owners, dealers, conductors, drivers, and similar matters.</string>
    <string name="article2_section3"><b>SECTION 3. Words and Phrases Defined.</b> – As used in this Act:</string>
    <string name="content"><b>(a) “Motor Vehicle”</b> shall mean any vehicle propelled by any power other than muscular power using the public highways,
        but excepting road rollers, trolley cars, street-sweepers, sprinklers, lawn mowers, bulldozers, graders, fork-lifts, amphibian
        trucks, and cranes if not used on public highways, vehicles which run only on rails or tracks, and tractors, trailers and traction engines of all
        kinds used exclusively for agricultural purposes. Trailers having any number of wheels, when propelled or intended to be propelled by attachment to
        a motor vehicle, shall be classified as separate motor vehicle with no power rating.</string>
    <string name="article2_content1"><b>(b) “Passenger automobiles”</b> shall mean all pneumatic-tire vehicles of types similar to those usually known under the
        following terms: touring car, command car, speedster, sports car, roadster, jeep, cycle car (except motor wheel and similar small outfits which are classified
        with motorcycles), coupe, landaulet, closed car, limousine, cabriolet, and sedan. Motor vehicles with changed or rebuilt bodies, such as jeepneys, jitneys, or
        station wagons, using a chassis of the usual pneumatic-tire passenger automobile type, shall also be classified as passenger automobile, if their net allowable
        carrying capacity, as determined by the Commissioner of Land Transportation, does not exceed nine passengers and if they are not used primarily for carrying freight or
        merchandise. The distinction between “passenger truck” and “passenger automobile” shall be that of common usage: Provided, That a motor vehicle registered for
        more than nine passengers shall be classified as “truck”: And Provided, further, That a “truck with seating compartments at the back not used for hire shall be
        registered under special “S” classifications. In case of dispute, the Commissioner of Land Transportation  shall determine the classification to which any special
        type of motor vehicle belongs.</string>
    <string name="article2_content2"><b>(c) “Articulated vehicle”</b> shall mean any motor vehicle with a trailer having no front axle and so attached that part of the trailer
        rests upon motor vehicle and a substantial part of the weight of the trailer and of its load is borne by the motor vehicle. Such a trailer shall be called as “semi-trailer.”
    </string>
    <string name="article2_content3"><b>(d) “Driver”</b> shall mean every and any licensed operator of a motor vehicle.</string>
    <string name="article2_content4"><b>(e) “Professional driver”</b> shall mean every and any driver hired or paid for driving or operating a motor vehicle,
        whether for private use or for hire to the public. Any person driving his own motor vehicle for hire is a professional driver. iatdc2005</string>
    <string name="chapter2_section5"><b>SECTION 5. Compulsory Registration of Motor Vehicles.</b> – (a) All motor vehicles and trailer of any type used or operated on or upon
        any highway of the Philippines must be registered with the Bureau of Land Transportation  for the current year in accordance with the provisions of this Act.</string>
    <string name="chapter2_section"><b>(b) The dates of annual registration of motor vehicles</b> shall be based on a registration scheme to be prepared by the Bureau of Land
        Transportation subject to approval of the Minister of Transportation and Communications. The scheme shall provide for a system that will distribute the registration of
        motor vehicles equitably over different months in a calendar year. Said scheme and rates shall not be changed more often than once every three (3) years, and only upon
        due notice given to the public at least ninety (90) calendar days before the effectivity of such registration scheme. Any registration of motor vehicles not renewed or before
        the date fixed by the Bureau of Land Transportation shall become delinquent and invalid.</string>
    <string name="chapter2_article1_sub">Duty to Register, Reports, Applications, Classifications</string>
    <string name="chapter2_section1"><b>(c) Dealer’s Report.</b> – Dealers shall submit to the Director of Land Transportation a report concerning the sale or transfer of or any other
        transaction involving motor vehicles, including such information as importation, manufacturing data, and number of stocks remaining, as the Director may require for the
        effective enforcement of the provision of this Act within five (5) working days from such sale, transfer or transaction. Such dealers shall furnish also the buyer with a
        duplicate copy thereof, duly authenticated by the Director of Land Transportation.</string>
    <string name="chapter2_section2"><b>(d) Unauthorized repair of change of engine serial number.</b> – Unless satisfactorily explained to and approved by the Director of Land
        Transportation, no repair involving the restoration of the original or registered serial number as stamped on the engine shall be allowed. No change involving an
        alteration of or tampering with the original or registered engine serial number of a motor vehicle shall ever be allowed, and any motor vehicle with a trace of having
        its engine serial number altered or tampered with shall be refused registration or re-registration.</string>
    <string name="chapter2_section3"><b>(e) Encumbrances of motor vehicles.</b>   Mortgages, attachments, and other encumbrances of motor vehicles, in order to be valid against third
        parties must be recorded in the Bureau. Voluntary transactions or voluntary encumbrances shall likewise be properly recorded on the face of all outstanding copies of
        the certificates of registration of the vehicle concerned. Cancellation or foreclosure of such mortgages, attachments, and other encumbrances shall likewise be recorded, and in the absence of such cancellation, no certificate of registration shall be issued without the corresponding notation of mortgage, attachment and/or other encumbrances.
Records of encumbrances of motor vehicles shall be kept by the Bureau of Land Transportation in chronological and/or alpha-numerical and/or any other sequence and shall contain, among other things, the time, date, number of the entry, and other cross-indexing entries for immediate data retrieval, in a “Book of Motor Vehicle Encumbrances” referring to the creation, cancellation or foreclosure of the aforesaid mortgages, attachments or to other encumbrances.
The Bureau of Land Transportation shall collect a fee of Fifty Pesos (P50.00) for every annotation of a mortgage, attachment and/or other encumbrances or cancellation thereof.</string>
    <string name="chapter2_section4"><b>SECTION 6. Application and Payments for Registration.</b> – Applications and payments for registration shall be made either personally or by
        registered mail, and the date of the cancellation of the postage stamps of envelopes containing money order or check shall be taken as the date of the application and/or
        payment for registration: Provided, That the application is properly prepared and the payment for registration is sufficient as required by law.</string>
    <string name="chapter2_section6"><b>SECTION 7. Registration Classification.</b> – The classification of vehicles shall be:</string>
    <string name="chapter2_section7"><b>(a) Private.</b> – Motor vehicles registered under this classification shall not be used for hire under any circumstance.</string>
    <string name="chapter2_section8"><b>(b) For Hire.</b> – Motor vehicles registered under this classification are those covered by certificates of public convenience, or special
        permits issued by the Board of Transportation,  and shall be subject to the provisions of the Public Service Act and the rules and regulations issued thereunder,
        as well as the provisions of this Act.</string>
    <string name="chapter2_section9"><b>(c) Government.</b> – Motor vehicles owned by the government of the Philippines or any of its political subdivisions shall be registered under
        this classification.</string>
    <string name="chapter2_section10"><b>(d) Diplomatic.</b> Motor vehicles owned by foreign governments or by their duly accredited diplomatic officers in the Philippines and used in
        the discharged of their official duties. Tourists bringing their own motor vehicles to the Philippines may, however, without registering such motor vehicles, use the same
        during but not after ninety (90) days of their sojourn: Provided, That the motor vehicle displays the number plates for the current year of some other country or state,
        and said number plates as well as the name and address (permanent and temporary) of the thereof are registered in the Bureau of Land Transportation  prior to the operation
        of the motor vehicle. If such tourists remain in the Philippines longer than ninety (90) days, the motor vehicle shall not be operated unless registered in accordance with
        this Act and the corresponding registration fees paid.</string>
    <string name="chapter2_section11"><b>SECTION 8. Schedule of Registration Fees.</b> – Except as otherwise specifically provided in this Act, each application for registration of motor
        vehicles shall be accompanied by an annual registration fee in accordance with a schedule to be prepared by the Bureau of Land Transportation subject to the approval of
        the Minister of Transportation and Communications  in consultation with the Minister of Finance.  The fees in the schedule shall be fixed on the basis of the model, body
        configuration, weight, cubic displacement or number of cylinders of the motor vehicle and other relevant factors. Said schedule shall not be changed more often than once
        every three (3) years, and only upon due notice given to the public at least ninety (90) calendar days before the effectivity of such schedule: Provided, however, That
        beginning the calendar year 1981 and until changed pursuant to this section, the schedule of registration fees shall be as follows:</string>
    <string name="about_us"><b>Vision</b></string>
    <string name="vision">We aim to be the leading company in providing entertainment and information in the field of technology.</string>
    <string name="mission_content">Our mission is to provide unique content and entertainment through our applications while providing relevant information. </string>
    <string name="mission"><b>Mission</b></string>
    <string name="contact_information"><b>Contact Information</b></string>
    <string name="contact_content">Our company, Code Tech, can be reached by sending us an email at codetechcompanyph@gmail.com, and/or by phone no. 696-3628 for a quick
        response. For more information, concern and services you can visit us on codetechph.com or through our facebook page https://www.facebook.com/codetechco.ph/.</string>
</resources>